assets/main.css
---
---

html,body {
  margin: 0;
  padding: 0;
}

* {
  font-family: 'Fira Sans';
}

*:not(pre,code) {
  font-variant: common-ligatures;
}

body {
  display: flex;
  flex: auto;
  flex-direction: column;
}

article,aside,footer,nav.pagination {
  background-color: white;

  padding-left: 3vw;
  padding-right: 3vw;
  padding-top: 3vh;
  padding-bottom: 3vh;
}

header,footer,nav.pagination {
  text-align: center;
}

header > div#cover {
  min-width: 100%;
  height: 70vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

article,aside,nav.pagination {
  margin-bottom: 5vh;
  margin-top: 2vh;
}

hr {
  width: 60%;
  border: none;
  height: 1px;
  background-color: rgba(0,0,0,.3);
}

.post-meta {
  color: rgba(0,0,0,.5);
  font-style: italic;
}

span.author,span.image-credit {
  display: block;
  font-size: 12pt;
}

figure {
  text-align: center;
}
img {
  display: block;
  margin: auto;
  max-width: 100%;
  max-height: 100%;
}

/* Hide the underlines from title links. */
h1 > a,h2 > a,h3 > a,h4 > a {
    text-decoration: none;
    color: #000000;
}

a:visited {
  color: #666666;
}

article > h2 {
    margin-top: 0px;
}

footer {
  right: 0;
  left: 0;
}

/* Make a nice button class */
.button {
  display: inline-block;
  font-weight: bold;
  text-decoration: none;
  color: #000000;
  padding: 5pt 15pt;
  margin: 5pt 5pt;
  line-height: 18pt;
  border: 1px solid #DDDDDD;
  box-shadow: 0 0 0px;
  transition: box-shadow 0.2s linear;
}

.button:hover {
    box-shadow: 0 0 2px;
}

.button:active {
    background-color: black;
    color: white;
    box-shadow: 0 0 2px black;
    border-color: black;
}

/* Make a nice border around code. */
pre {
  padding: 5px;
  background-color: #EEEEEE;
  border: 1px solid #DDDDDD;
}

:not(pre) > code {
  padding-left: 2px;
  padding-right: 2px;
  background-color: #EEEEEE;
  border: 1px solid #DDDDDD;
}

code,pre {
  font-family: 'Fira Mono';
  font-size: 10pt;
}

/* This is for code highlighting. */
.highlight .hll { background-color: #ffffcc }
.highlight .c { color: #999988; font-style: italic } /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
.highlight .k { color: #000000; font-weight: bold } /* Keyword */
.highlight .o { color: #000000; font-weight: bold } /* Operator */
.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.highlight .ge { color: #000000; font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #999999 } /* Generic.Heading */
.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.highlight .go { color: #888888 } /* Generic.Output */
.highlight .gp { color: #555555 } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
.highlight .gt { color: #aa0000 } /* Generic.Traceback */
.highlight .kc { color: #000000; font-weight: bold } /* Keyword.Constant */
.highlight .kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
.highlight .kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
.highlight .kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
.highlight .kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
.highlight .m { color: #009999 } /* Literal.Number */
.highlight .s { color: #d01040 } /* Literal.String */
.highlight .na { color: #008080 } /* Name.Attribute */
.highlight .nb { color: #0086B3 } /* Name.Builtin */
.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
.highlight .no { color: #008080 } /* Name.Constant */
.highlight .nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
.highlight .ni { color: #800080 } /* Name.Entity */
.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
.highlight .nl { color: #990000; font-weight: bold } /* Name.Label */
.highlight .nn { color: #555555 } /* Name.Namespace */
.highlight .nt { color: #000080 } /* Name.Tag */
.highlight .nv { color: #008080 } /* Name.Variable */
.highlight .ow { color: #000000; font-weight: bold } /* Operator.Word */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mf { color: #009999 } /* Literal.Number.Float */
.highlight .mh { color: #009999 } /* Literal.Number.Hex */
.highlight .mi { color: #009999 } /* Literal.Number.Integer */
.highlight .mo { color: #009999 } /* Literal.Number.Oct */
.highlight .sb { color: #d01040 } /* Literal.String.Backtick */
.highlight .sc { color: #d01040 } /* Literal.String.Char */
.highlight .sd { color: #d01040 } /* Literal.String.Doc */
.highlight .s2 { color: #d01040 } /* Literal.String.Double */
.highlight .se { color: #d01040 } /* Literal.String.Escape */
.highlight .sh { color: #d01040 } /* Literal.String.Heredoc */
.highlight .si { color: #d01040 } /* Literal.String.Interpol */
.highlight .sx { color: #d01040 } /* Literal.String.Other */
.highlight .sr { color: #009926 } /* Literal.String.Regex */
.highlight .s1 { color: #d01040 } /* Literal.String.Single */
.highlight .ss { color: #990073 } /* Literal.String.Symbol */
.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
.highlight .vc { color: #008080 } /* Name.Variable.Class */
.highlight .vg { color: #008080 } /* Name.Variable.Global */
.highlight .vi { color: #008080 } /* Name.Variable.Instance */
.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */

